--- a/time1/public/index.html
+++ b/time1/public/index.html
@@ -36,7 +36,7 @@
                     <img src="cutedog_1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">น้องหมาน่ารัก</h5>
-                        <p class="card-text">น้องหมามักจะหาผู้โชคร้องเสมอมันจะทำตัวหน้ารักใส่ให้เราเอ็นดูและสุดท้ายก็ต้องเลี้ยงมันไปตลอดชีวิต</p>
+                        <p class="card-text">น้องหมามักจะหาผู้โชคร้อยเสมอมันจะทำตัวน่ารักใส่ให้เราเอ็นดูและสุดท้ายก็ต้องเลี้ยงมันไปตลอดชีวิต</p>
                         <hr>
                         <div class="row">
                             <div class="col-3">
